[gd_scene load_steps=6 format=3 uid="uid://dahqqm6cbn4yf"]

[ext_resource type="Script" uid="uid://c77qmqqkawhyt" path="res://scripts/main_menu.gd" id="1_l6cm7"]
[ext_resource type="Texture2D" uid="uid://cn7ja2j2kipn7" path="res://resources/images/Dev Studio.png" id="2_bqqt6"]
[ext_resource type="Texture2D" uid="uid://kas00cq0y5l4" path="res://resources/images/Game Off.png" id="3_wu84c"]
[ext_resource type="AudioStream" uid="uid://dv2q533pp4u6r" path="res://resources/audio/menu_music.ogg" id="4_wu84c"]
[ext_resource type="VideoStream" uid="uid://cax8qqaplepm8" path="res://resources/video/intro.ogv" id="5_8ln24"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")
developer_logo = ExtResource("2_bqqt6")
gamejam_logo = ExtResource("3_wu84c")
menu_music = ExtResource("4_wu84c")

[node name="VideoBackground" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
stream = ExtResource("5_8ln24")
expand = true
loop = true

[node name="VideoOverlay" type="ColorRect" parent="VideoBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.15686275)

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.12, 1)

[node name="BackgroundTexture" type="TextureRect" parent="Background"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="GameTitle" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "Echoes of Deep"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ButtonNewGame" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "NEW GAME"

[node name="ButtonTutorial" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "HOW TO PLAY"

[node name="ButtonOptions" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "OPTIONS
"

[node name="ButtonCredits" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "CREDITS"

[node name="ButtonQuit" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "EXIT"

[node name="DeveloperLogo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -120.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("2_bqqt6")
expand_mode = 1
stretch_mode = 5

[node name="GameJamLogo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 220.0
offset_bottom = -20.0
grow_vertical = 0
texture = ExtResource("3_wu84c")
expand_mode = 1
stretch_mode = 5

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -30.0
offset_right = 120.0
offset_bottom = -10.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 12
text = "v0.1.0"

[node name="TutorialPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="TutorialPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="MarginContainer" type="MarginContainer" parent="TutorialPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="TutorialPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TutorialTitle" type="Label" parent="TutorialPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "HOW TO PLAY"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="TutorialPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TutorialText" type="RichTextLabel" parent="TutorialPanel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[center][b]CONTROLS[/b][/center]

[b]MOVEMENT[/b]

[color=#4a9eff]W[/color] - Move forward
[color=#4a9eff]A[/color] - Move left
[color=#4a9eff]S[/color] - Move backward
[color=#4a9eff]D[/color] - Move right

[b]ACTIONS[/b]

[color=#ff6b6b]F[/color] - Activate echolocation (waves)
[color=#ff6b6b]R[/color] - Consume food
[color=#ff6b6b]E[/color] - Interact with objects

[center][b]GAME MECHANICS[/b][/center]

[b]ECHOLOCATION[/b]
Press [color=#ff6b6b]F[/color] to emit waves that reveal the environment.
This ability allows you to navigate through the darkness.

[b]FEEDING[/b]
Search for and consume food by pressing [color=#ff6b6b]R[/color] to maintain your energy.
Your survival depends on your ability to find resources.
If your hunger reaches 0, your health will start to decrease.

[b]SANITY SYSTEM[/b]
[color=#ffcc00]WARNING![/color] If your sanity bar gets too low,
the screen will begin to distort with glitch effects.
Keep your sanity high to avoid these effects.

[center][b]GOOD LUCK IN THE DEPTHS![/b][/center]
"
fit_content = true

[node name="ButtonBackTutorial" type="Button" parent="TutorialPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "RETURN"

[node name="CreditsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CreditsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="MarginContainer" type="MarginContainer" parent="CreditsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="CreditsPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="CreditsTitle" type="Label" parent="CreditsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "CREDITS"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="CreditsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CreditsText" type="RichTextLabel" parent="CreditsPanel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "[center][b]DEVELOPMENT[/b]
Team Khaos

[b]ART & MODELING[/b]
Eduardo \"Wacko\" Casa
Luis \"Kairos\" Guaygua

[b]MUSIC & SOUND[/b]
Henry \"Hanly\" Tonato

[b]PROGRAMMING[/b]
Mateo \"Wesitos\" Garz√≥n
Yuverly \"Hidokun\" Verdezoto

[b]SPECIAL THANKS[/b]
Game Jam \"Game Off\"
Damara \"Mara\" Izurieta
Alejandra \"Queso\" Moreno
Community[/center]"
fit_content = true

[node name="ButtonBack" type="Button" parent="CreditsPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "RETURN"

[node name="OptionsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="CenterContainer" type="CenterContainer" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="OptionsTitle" type="Label" parent="OptionsPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "OPTIONS"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="OptionsPanel/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="MasterVolumeLabel" type="Label" parent="OptionsPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "General Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="OptionsPanel/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 30)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.7

[node name="MusicVolumeLabel" type="Label" parent="OptionsPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="OptionsPanel/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 30)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="SFXVolumeLabel" type="Label" parent="OptionsPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Volume Effects"

[node name="SFXVolumeSlider" type="HSlider" parent="OptionsPanel/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 30)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.7

[node name="Spacer2" type="Control" parent="OptionsPanel/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="FullscreenCheckbox" type="CheckBox" parent="OptionsPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Full screen"

[node name="Spacer3" type="Control" parent="OptionsPanel/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ButtonBackOptions" type="Button" parent="OptionsPanel/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "RETURN"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_wu84c")

[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonNewGame" to="." method="_on_button_new_game_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonTutorial" to="." method="_on_button_tutorial_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonOptions" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonCredits" to="." method="_on_button_credits_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonQuit" to="." method="_on_button_quit_pressed"]
[connection signal="pressed" from="TutorialPanel/MarginContainer/VBoxContainer/ButtonBackTutorial" to="." method="_on_button_back_tutorial_pressed"]
[connection signal="pressed" from="CreditsPanel/MarginContainer/VBoxContainer/ButtonBack" to="." method="_on_button_back_credits_pressed"]
[connection signal="value_changed" from="OptionsPanel/CenterContainer/VBoxContainer/MasterVolumeSlider" to="." method="_on_master_volume_changed"]
[connection signal="value_changed" from="OptionsPanel/CenterContainer/VBoxContainer/MusicVolumeSlider" to="." method="_on_music_volume_changed"]
[connection signal="value_changed" from="OptionsPanel/CenterContainer/VBoxContainer/SFXVolumeSlider" to="." method="_on_sfx_volume_changed"]
[connection signal="toggled" from="OptionsPanel/CenterContainer/VBoxContainer/FullscreenCheckbox" to="." method="_on_fullscreen_toggled"]
[connection signal="pressed" from="OptionsPanel/CenterContainer/VBoxContainer/ButtonBackOptions" to="." method="_on_button_back_options_pressed"]
